@@ -18,6 +18,7 @@
 package org.apache.lucene.luke.models.overview;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -62,6 +63,6 @@ final class TopTerms {
       topTermsCache.put(field, topTerms);
     }
 
-    return List.copyOf(topTermsCache.get(field));
+    return Collections.unmodifiableList(topTermsCache.get(field));
   }
 }
