@@ -20,6 +20,7 @@ package org.apache.lucene.luke.util.reflection;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.net.URL;
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.Objects;
 import java.util.Set;
@@ -54,7 +55,7 @@ final class SubtypeCollector<T> implements Runnable {
   }
 
   Set<Class<? extends T>> getTypes() {
-    return Set.copyOf(types);
+    return Collections.unmodifiableSet(types);
   }
 
   @Override
