@@ -16,6 +16,7 @@
  */
 package org.apache.solr.core;
 
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -53,7 +54,7 @@ public class InitParams {
     Set<String> paths = null;
     String pathStr = p.attributes.get(PATH);
     if (pathStr != null) {
-      paths = Set.copyOf(StrUtils.splitSmart(pathStr, ','));
+      paths = Collections.unmodifiableSet(new HashSet<>(StrUtils.splitSmart(pathStr, ',')));
     }
     this.paths = paths;
     @SuppressWarnings({"rawtypes"})
