@@ -19,9 +19,11 @@ package org.apache.solr.client.solrj;
 import java.io.IOException;
 import java.io.Serializable;
 import java.security.Principal;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
@@ -29,6 +31,8 @@ import java.util.concurrent.TimeUnit;
 import org.apache.solr.client.solrj.request.RequestWriter;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.ContentStream;
+
+import static java.util.Collections.unmodifiableSet;
 
 /**
  * 
@@ -54,25 +58,11 @@ public abstract class SolrRequest<T extends SolrResponse> implements Serializabl
     DELETE
   };
 
-  public enum SolrRequestType {
-    QUERY,
-    UPDATE,
-    SECURITY,
-    ADMIN,
-    STREAMING,
-    UNSPECIFIED
-  };
-
-  public enum SolrClientContext {
-    CLIENT,
-    SERVER
-  };
-
-  public static final Set<String> SUPPORTED_METHODS = Set.of(
+  public static final Set<String> SUPPORTED_METHODS = unmodifiableSet(new HashSet<>(Arrays.<String>asList(
       METHOD.GET.toString(),
       METHOD.POST.toString(),
       METHOD.PUT.toString(),
-      METHOD.DELETE.toString());
+      METHOD.DELETE.toString())));
 
   private METHOD method = METHOD.GET;
   private String path = null;
@@ -181,11 +171,6 @@ public abstract class SolrRequest<T extends SolrResponse> implements Serializabl
   public void setQueryParams(Set<String> queryParams) {
     this.queryParams = queryParams;
   }
-
-  /**
-   * This method defines the type of this Solr request.
-   */
-  public abstract String getRequestType();
 
   public abstract SolrParams getParams();
 
