@@ -40,6 +40,7 @@ import org.apache.solr.client.solrj.response.RequestStatusState;
 import org.apache.solr.client.solrj.util.SolrIdentifierValidator;
 import org.apache.solr.common.MapWriter;
 import org.apache.solr.common.SolrException;
+import org.apache.solr.common.cloud.DocCollection;
 import org.apache.solr.common.cloud.ImplicitDocRouter;
 import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.cloud.ZkStateReader;
@@ -54,6 +55,11 @@ import org.apache.solr.common.params.ShardParams;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.NamedList;
 
+import static org.apache.solr.client.solrj.cloud.autoscaling.Policy.POLICY;
+import static org.apache.solr.common.cloud.DocCollection.RULE;
+import static org.apache.solr.common.cloud.DocCollection.SNITCH;
+import static org.apache.solr.common.cloud.ZkStateReader.AUTO_ADD_REPLICAS;
+import static org.apache.solr.common.cloud.ZkStateReader.MAX_SHARDS_PER_NODE;
 import static org.apache.solr.common.cloud.ZkStateReader.NRT_REPLICAS;
 import static org.apache.solr.common.cloud.ZkStateReader.PULL_REPLICAS;
 import static org.apache.solr.common.cloud.ZkStateReader.READ_ONLY;
@@ -66,7 +72,6 @@ import static org.apache.solr.common.params.CollectionAdminParams.COUNT_PROP;
 import static org.apache.solr.common.params.CollectionAdminParams.CREATE_NODE_SET_PARAM;
 import static org.apache.solr.common.params.CollectionAdminParams.CREATE_NODE_SET_SHUFFLE_PARAM;
 import static org.apache.solr.common.params.CollectionAdminParams.ROUTER_PREFIX;
-import static org.apache.solr.common.params.CollectionAdminParams.SKIP_NODE_ASSIGNMENT;
 import static org.apache.solr.common.params.CollectionAdminParams.WITH_COLLECTION;
 
 /**
@@ -80,7 +85,12 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
    * The set of modifiable collection properties
    */
   public static final java.util.List<String> MODIFIABLE_COLLECTION_PROPERTIES = Arrays.asList(
+      RULE,
+      SNITCH,
       REPLICATION_FACTOR,
+      MAX_SHARDS_PER_NODE,
+      AUTO_ADD_REPLICAS,
+      POLICY,
       COLL_CONF,
       WITH_COLLECTION,
       COLOCATED_WITH,
@@ -139,11 +149,6 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
   @Override
   public String toString() {
     return jsonStr();
-  }
-
-  @Override
-  public String getRequestType() {
-    return SolrRequestType.ADMIN.toString();
   }
 
   /**
@@ -434,13 +439,17 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
     protected String shards;
     protected String routerField;
     protected Integer numShards;
+    protected Integer maxShardsPerNode;
     protected Integer nrtReplicas;
     protected Integer pullReplicas;
     protected Integer tlogReplicas;
 
     protected Properties properties;
+    protected Boolean autoAddReplicas;
     protected String alias;
+    protected Integer stateFormat;
     protected String[] rule , snitch;
+    protected String withCollection;
 
     /** Constructor intended for typical use cases */
     protected Create(String collection, String config, Integer numShards, Integer numNrtReplicas, Integer numTlogReplicas, Integer numPullReplicas) { // TODO: maybe add other constructors
@@ -470,11 +479,14 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
     public Create setCreateNodeSet(String nodeSet) { this.createNodeSet = nodeSet; return this; }
     public Create setRouterName(String routerName) { this.routerName = routerName; return this; }
     public Create setRouterField(String routerField) { this.routerField = routerField; return this; }
+    public Create setMaxShardsPerNode(Integer numShards) { this.maxShardsPerNode = numShards; return this; }
+    public Create setAutoAddReplicas(boolean autoAddReplicas) { this.autoAddReplicas = autoAddReplicas; return this; }
     public Create setNrtReplicas(Integer nrtReplicas) { this.nrtReplicas = nrtReplicas; return this;}
     public Create setTlogReplicas(Integer tlogReplicas) { this.tlogReplicas = tlogReplicas; return this;}
     public Create setPullReplicas(Integer pullReplicas) { this.pullReplicas = pullReplicas; return this;}
 
     public Create setReplicationFactor(Integer repl) { this.nrtReplicas = repl; return this; }
+    public Create setStateFormat(Integer stateFormat) { this.stateFormat = stateFormat; return this; }
     public Create setRule(String... s){ this.rule = s; return this; }
     public Create setSnitch(String... s){ this.snitch = s; return this; }
 
@@ -488,11 +500,15 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
     public String getRouterName() { return  routerName; }
     public String getShards() { return  shards; }
     public Integer getNumShards() { return numShards; }
+    public Integer getMaxShardsPerNode() { return maxShardsPerNode; }
 
     public Integer getReplicationFactor() { return getNumNrtReplicas(); }
     public Integer getNumNrtReplicas() { return nrtReplicas; }
+    public Boolean getAutoAddReplicas() { return autoAddReplicas; }
     public Integer getNumTlogReplicas() {return tlogReplicas;}
     public Integer getNumPullReplicas() {return pullReplicas;}
+
+    public Integer getStateFormat() { return stateFormat; }
 
     /**
      * Provide the name of the shards to be created, separated by commas
@@ -544,6 +560,9 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
       if (numShards != null) {
         params.set( ZkStateReader.NUM_SHARDS_PROP, numShards);
       }
+      if (maxShardsPerNode != null) {
+        params.set( ZkStateReader.MAX_SHARDS_PER_NODE, maxShardsPerNode);
+      }
       if (routerName != null)
         params.set( "router.name", routerName);
       if (shards != null)
@@ -554,8 +573,14 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
       if (nrtReplicas != null) {
         params.set( ZkStateReader.NRT_REPLICAS, nrtReplicas);
       }
+      if (autoAddReplicas != null) {
+        params.set(ZkStateReader.AUTO_ADD_REPLICAS, autoAddReplicas);
+      }
       if (properties != null) {
         addProperties(params, properties);
+      }
+      if (stateFormat != null) {
+        params.set(DocCollection.STATE_FORMAT, stateFormat);
       }
       if (pullReplicas != null) {
         params.set(ZkStateReader.PULL_REPLICAS, pullReplicas);
@@ -563,12 +588,25 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
       if (tlogReplicas != null) {
         params.set(ZkStateReader.TLOG_REPLICAS, tlogReplicas);
       }
+      if (rule != null) params.set(DocCollection.RULE, rule);
+      if (snitch != null) params.set(DocCollection.SNITCH, snitch);
+      params.setNonNull(POLICY, policy);
+      params.setNonNull(WITH_COLLECTION, withCollection);
       params.setNonNull(ALIAS, alias);
       return params;
     }
 
     public Create setPolicy(String policy) {
       this.policy = policy;
+      return this;
+    }
+
+    public String getWithCollection() {
+      return withCollection;
+    }
+
+    public Create setWithCollection(String withCollection) {
+      this.withCollection = withCollection;
       return this;
     }
   }
@@ -661,6 +699,19 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
       params.set(CollectionParams.TARGET_NODE, targetNode);
       if (parallel != null) params.set("parallel", parallel.toString());
       return params;
+    }
+
+  }
+  public static class UtilizeNode extends AsyncCollectionAdminRequest {
+    protected String node;
+
+    public UtilizeNode(String node) {
+      super(CollectionAction.UTILIZENODE);
+      this.node = node;
+    }
+    @Override
+    public SolrParams getParams() {
+      return ((ModifiableSolrParams) super.getParams()).set(CoreAdminParams.NODE, node);
     }
 
   }
@@ -861,23 +912,13 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
   }
 
   /**
-   * Return a SolrRequest for low-level detailed status of the specified collection. 
-   * @param collection the collection to get the status of.
+   * Return a SolrRequest for low-level detailed status of the collection.
    */
   public static ColStatus collectionStatus(String collection) {
-    checkNotNull(CoreAdminParams.COLLECTION, collection);
     return new ColStatus(collection);
   }
-  
-  /**
-   * Return a SolrRequest for low-level detailed status of all collections on the cluster.
-   */
-  public static ColStatus collectionStatuses() {
-    return new ColStatus();
-  }
 
-  public static class ColStatus extends AsyncCollectionAdminRequest {
-    protected String collection = null;
+  public static class ColStatus extends AsyncCollectionSpecificAdminRequest {
     protected Boolean withSegments = null;
     protected Boolean withFieldInfo = null;
     protected Boolean withCoreInfo = null;
@@ -888,12 +929,7 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
     protected Float rawSizeSamplingPercent = null;
 
     private ColStatus(String collection) {
-      super(CollectionAction.COLSTATUS);
-      this.collection = collection;
-    }
-    
-    private ColStatus() {
-      super(CollectionAction.COLSTATUS);
+      super(CollectionAction.COLSTATUS, collection);
     }
 
     public ColStatus setWithSegments(boolean withSegments) {
@@ -939,7 +975,6 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
     @Override
     public SolrParams getParams() {
       ModifiableSolrParams params = (ModifiableSolrParams)super.getParams();
-      params.setNonNull(CoreAdminParams.COLLECTION, collection);
       params.setNonNull("segments", withSegments);
       params.setNonNull("fieldInfo", withFieldInfo);
       params.setNonNull("coreInfo", withCoreInfo);
@@ -1054,10 +1089,12 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
 
     // in common with collection creation:
     protected String configName;
+    protected Integer maxShardsPerNode;
     protected Integer replicationFactor;
     protected Integer nrtReplicas;
     protected Integer tlogReplicas;
     protected Integer pullReplicas;
+    protected Boolean autoAddReplicas;
     protected Optional<String> createNodeSet = Optional.empty();
     protected Optional<Boolean> createNodeSetShuffle = Optional.empty();
     protected Properties properties;
@@ -1105,6 +1142,9 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
     public Restore setConfigName(String config) { this.configName = config; return this; }
     public String getConfigName()  { return configName; }
 
+    public Integer getMaxShardsPerNode() { return maxShardsPerNode; }
+    public Restore setMaxShardsPerNode(int maxShardsPerNode) { this.maxShardsPerNode = maxShardsPerNode; return this; }
+
     public Integer getReplicationFactor() { return replicationFactor; }
     public Restore setReplicationFactor(Integer replicationFactor) { this.replicationFactor = replicationFactor; return this; }
 
@@ -1116,6 +1156,9 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
 
     public Integer getPullReplicas() { return pullReplicas; }
     public Restore setPullReplicas(Integer pullReplicas) { this.pullReplicas = pullReplicas; return this; }
+
+    public Boolean getAutoAddReplicas() { return autoAddReplicas; }
+    public Restore setAutoAddReplicas(boolean autoAddReplicas) { this.autoAddReplicas = autoAddReplicas; return this; }
 
     public Properties getProperties() {
       return properties;
@@ -1131,6 +1174,9 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
       params.set(CoreAdminParams.NAME, backupName);
       params.set(CoreAdminParams.BACKUP_LOCATION, location); //note: optional
       params.set("collection.configName", configName); //note: optional
+      if (maxShardsPerNode != null) {
+        params.set( ZkStateReader.MAX_SHARDS_PER_NODE, maxShardsPerNode);
+      }
       if (replicationFactor != null && nrtReplicas != null) {
         throw new SolrException(SolrException.ErrorCode.BAD_REQUEST,
             "Cannot set both replicationFactor and nrtReplicas as they mean the same thing");
@@ -1146,6 +1192,9 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
       }
       if (tlogReplicas != null) {
         params.set(ZkStateReader.TLOG_REPLICAS, tlogReplicas);
+      }
+      if (autoAddReplicas != null) {
+        params.set(ZkStateReader.AUTO_ADD_REPLICAS, autoAddReplicas);
       }
       if (properties != null) {
         addProperties(params, properties);
@@ -1796,12 +1845,12 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
 
     @Override
     public java.util.List<String> getParamNames() {
-      return java.util.List.of(ROUTER_TYPE_NAME, ROUTER_FIELD, ROUTER_START, ROUTER_INTERVAL,ROUTER_MAX_FUTURE, ROUTER_PREEMPTIVE_CREATE_WINDOW, ROUTER_AUTO_DELETE_AGE, CommonParams.TZ);
+      return Arrays.asList(ROUTER_TYPE_NAME, ROUTER_FIELD, ROUTER_START, ROUTER_INTERVAL,ROUTER_MAX_FUTURE, ROUTER_PREEMPTIVE_CREATE_WINDOW, ROUTER_AUTO_DELETE_AGE, CommonParams.TZ);
     }
 
     @Override
     public java.util.List<String> getRequiredParamNames() {
-      return java.util.List.of(ROUTER_TYPE_NAME, ROUTER_FIELD,ROUTER_START, ROUTER_INTERVAL);
+      return Arrays.asList(ROUTER_TYPE_NAME, ROUTER_FIELD,ROUTER_START, ROUTER_INTERVAL);
     }
   }
   /**
@@ -1874,12 +1923,12 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
 
     @Override
     public java.util.List<String> getParamNames() {
-      return java.util.List.of(ROUTER_TYPE_NAME, ROUTER_FIELD,ROUTER_MAX_CARDINALITY, ROUTER_MUST_MATCH);
+      return Arrays.asList(ROUTER_TYPE_NAME, ROUTER_FIELD,ROUTER_MAX_CARDINALITY, ROUTER_MUST_MATCH);
     }
 
     @Override
     public java.util.List<String> getRequiredParamNames() {
-      return java.util.List.of(ROUTER_TYPE_NAME, ROUTER_FIELD,ROUTER_MAX_CARDINALITY);
+      return Arrays.asList(ROUTER_TYPE_NAME, ROUTER_FIELD,ROUTER_MAX_CARDINALITY);
     }
   }
 
@@ -2064,7 +2113,6 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
     protected Properties properties;
     protected Replica.Type type;
     protected Integer nrtReplicas, tlogReplicas, pullReplicas;
-    protected Boolean skipNodeAssignment;
     protected String createNodeSet;
 
     private AddReplica(String collection, String shard, String routeKey, Replica.Type type) {
@@ -2097,11 +2145,6 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
 
     public AddReplica setNode(String node) {
       this.node = node;
-      return this;
-    }
-
-    public AddReplica setSkipNodeAssignment(Boolean skipNodeAssignment) {
-      this.skipNodeAssignment = skipNodeAssignment;
       return this;
     }
 
@@ -2199,9 +2242,6 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
       }
       if (node != null) {
         params.add(CoreAdminParams.NODE, node);
-      }
-      if (skipNodeAssignment != null) {
-        params.add(SKIP_NODE_ASSIGNMENT, String.valueOf(skipNodeAssignment));
       }
       if (instanceDir != null)  {
         params.add(CoreAdminParams.INSTANCE_DIR, instanceDir);
@@ -2756,6 +2796,35 @@ public abstract class CollectionAdminRequest<T extends CollectionAdminResponse> 
       ModifiableSolrParams params = new ModifiableSolrParams(super.getParams());
       params.set(CoreAdminParams.REPLICA, replica);
       params.set("property", propertyName);
+      return params;
+    }
+
+
+  }
+
+  /**
+   * Returns a SolrRequest to migrate a collection state format
+   *
+   * This is an expert-level request, and should not generally be necessary.
+   */
+  public static MigrateClusterState migrateCollectionFormat(String collection) {
+    return new MigrateClusterState(collection);
+  }
+
+  // MIGRATECLUSTERSTATE request
+  public static class MigrateClusterState extends AsyncCollectionAdminRequest {
+
+    protected String collection;
+
+    private MigrateClusterState(String collection) {
+      super(CollectionAction.MIGRATESTATEFORMAT);
+      this.collection = checkNotNull(CoreAdminParams.COLLECTION, collection);
+    }
+
+    @Override
+    public SolrParams getParams() {
+      ModifiableSolrParams params = new ModifiableSolrParams(super.getParams());
+      params.set(CoreAdminParams.COLLECTION, collection);
       return params;
     }
   }
